fix: overflow fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -206,7 +206,7 @@ p {
 
 #index-1 {
     background-color: var(--main-background-color);
-    overflow: visible;
+    overflow-y: visible;
     min-height: 630px;
     margin-top: -132px;
     padding-top: 128px;
@@ -255,13 +255,11 @@ p {
     color: var(--text-hover-color);
 }
 
-
-
 #index-2 {
     min-height: 315px;
     display: flex;
     align-items: center;
-    background: #FCFCFC 0% 0% no-repeat padding-box;
+    background: #F9F9F9 0% 0% no-repeat padding-box;
     position: relative;
     z-index: -1;
 }
@@ -319,13 +317,13 @@ p {
 #index-7 {
     display: flex;
     align-items: center;
-    background: #FCFCFC 0% 0% no-repeat padding-box;
+    background: #F9F9F9 0% 0% no-repeat padding-box;
     min-height: 300px;
     overflow: hidden;
 }
 
 #index-7 {
-    overflow: visible;
+    overflow-y: visible;
 }
 #index-7 .background-img-container{
     position: relative;
@@ -409,7 +407,7 @@ footer {
 #about-1 {
     margin-bottom: 10rem;
     text-align: center;
-    background-color: #FCFCFC;
+    background-color: #F9F9F9;
     padding-bottom: 10rem;
 }
 
@@ -427,7 +425,7 @@ footer {
 }
 
 #about-3 {
-    background: #FCFCFC 0% 0% no-repeat padding-box;
+    background: #F9F9F9 0% 0% no-repeat padding-box;
     padding-left: 20%;
     padding-right: 20%;
 }
@@ -682,7 +680,7 @@ footer {
 }
 
 #security-1 {
-    background: #FCFCFC;
+    background: #F9F9F9;
     min-height: 325px;
     position: relative;
 }
@@ -1124,23 +1122,6 @@ input[type='radio'] {
 
 @media (min-width:767px) {
 
-
-
-    /* .overflowing_background {
-        position: relative;
-        background-color: transparent;
-    }
-
-    .overflowing_background::before {
-        content: " ";
-        position: absolute;
-        left: 50%;
-        top: -140px;
-        width: 712px;
-        height: 1000px;
-        background: url('../img/homepage-illustration-1.png') 0% 0% no-repeat padding-box;
-    } */
-
     table.responsive-table {
         width: 100%;
     }
@@ -1254,7 +1235,7 @@ input[type='radio'] {
 
     #index-1 h1 {
         text-align: start;
-        padding-right: 22%;
+        padding-right: 25%;
     }
 
     #index-1 p {
@@ -1322,13 +1303,6 @@ input[type='radio'] {
         left: 40px;
         width: 760px;
     }
-
-
-    .overflowing_background {
-        bottom: -386px;
-        left: 6%;
-    }
-
 
     #index-1 h1 {
         margin-top: 65px;
@@ -1584,7 +1558,7 @@ input[type='radio'] {
 
     #about-5 {
         height: 800px;
-        background-color: #fcfcfc;
+        background-color: #F9F9F9;
     }
 
     #about-5 p {
@@ -1919,6 +1893,12 @@ input[type='radio'] {
 }
 
 @media only screen and (max-width: 576px) {
+
+    .overflowing_background {
+        bottom: -386px;
+        left: 6%;
+    }
+
 
     #register {
         padding-top: 3rem;
